# WutherCore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  RP内核设计文档.md  SECURITY.md  SUPPORT.md  build.cmd
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
crates/core-api/: Cargo.toml
crates/core-api/src/: compat.rs  compat_cache.rs  compat_security.rs  compat_ws.rs  lib.rs  native.rs  server.rs
crates/core-api/tests/: compat_smoke.rs
crates/core-capture/: Cargo.toml
crates/core-capture/src/: android_caps.rs  android_vpn_config.rs  capture_dns.rs  default_iface.rs  dial_meta.rs  doctor.rs  eim_nat.rs  engine.rs  fakeip_dns.rs  frame_cache.rs  gc.rs  ipset.rs  lib.rs  nat.rs  net_monitor.rs  net_monitor_event.rs  netstack_dispatch.rs  packet.rs  resource_claims.rs  route_table.rs  stack.rs  stack_system.rs  supervisor.rs  sys_proxy.rs  system_dispatch.rs  tcp_nat.rs  tproxy_rules.rs  tun.rs  tun_dispatch.rs  tun_inbound.rs  tun_io.rs  tun_logging.rs  tun_pump.rs  udp_forwarder.rs  udp_handle.rs  udp_session.rs  uid_filter.rs
crates/core-capture/src/platform/: android.rs  android_jni.rs  android_tun_io.rs  gro_merge.rs  gso_split.rs  ios_bridge.rs  linux.rs  linux_identity_bypass.rs  linux_tproxy.rs  linux_tun_io.rs  macos.rs  macos_tun_io.rs  mod.rs  route_probe.rs  stub.rs  tunrs_io.rs  vnet_hdr.rs  vpnservice_tun_io.rs  windows.rs  windows_tun_io.rs  wintun_abi.rs
crates/core-capture/tests/: dispatch_smoke.rs  packet_roundtrip.rs  splice_smoke.rs  stack_smoke.rs  udp_forwarder_e2e.rs
crates/core-config/: Cargo.toml
crates/core-config/src/: error.rs  lib.rs  loader.rs  migrate.rs  model.rs  node_uri.rs  profile.rs  ruleset_compat.rs  runtime_plan.rs
crates/core-feeds/: Cargo.toml
crates/core-feeds/src/: cache.rs  fetcher.rs  lib.rs  manager.rs  parser.rs  userinfo.rs
crates/core-fetch/src/: lib.rs
crates/core-inbound/: Cargo.toml
crates/core-inbound/src/: lib.rs  listener.rs  mixed.rs  privilege.rs  reality.rs  vless.rs
crates/core-mesh/: Cargo.toml
crates/core-mesh/src/: backend.rs  conflict.rs  lib.rs  model.rs  process.rs  registry.rs  supervisor.rs
crates/core-observe/: Cargo.toml
crates/core-observe/src/: connections.rs  copy_counted.rs  lib.rs  log_bus.rs  metrics.rs  tracing_init.rs  watchdog.rs
crates/core-outbound/: Cargo.toml
crates/core-outbound/src/: adapter.rs  block.rs  direct.rs  dns_hijack.rs  http.rs  lib.rs  loopback.rs  net_guard.rs  registry.rs  socks5.rs  stub.rs
crates/core-outbound/src/proto/: addr.rs  anytls.rs  hysteria.rs  hysteria2.rs  mieru.rs  mod.rs  shadowsocks.rs  snell.rs  ss2022.rs  ssh.rs  ssr.rs  trojan.rs  trusttunnel.rs  tuic.rs  vless.rs  vmess.rs  vmess_legacy.rs  wireguard.rs
crates/core-outbound/src/proto/sudoku/: conn.rs  grid.rs  httpmask.rs  kip.rs  layout.rs  mod.rs  outbound.rs  record.rs  table.rs
crates/core-outbound/src/proto/xhttp/: client.rs  config.rs  conn.rs  mod.rs  request.rs  upload_queue.rs  xpadding.rs
crates/core-outbound/src/transport/: grpc_transport.rs  h2_transport.rs  http_transport.rs  mod.rs  reality.rs  tcp.rs  tls.rs  ws.rs  xhttp_transport.rs
crates/core-process/: Cargo.toml
crates/core-process/src/: android.rs  cache.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/core-reality/: Cargo.toml  NOTICE.md
crates/core-reality/src/: buffer.rs  client.rs  framing.rs  keys.rs  lib.rs  server.rs
crates/core-reality/src/donor/: mod.rs  reality_aead.rs  reality_auth.rs  reality_certificate.rs  reality_reader_writer.rs  reality_records.rs  reality_server_connection.rs  reality_tls13_keys.rs  reality_tls13_messages.rs  reality_util.rs
crates/core-reality/tests/: spider_same_connection.rs  transparent_fallback.rs  xray_interop.rs
crates/core-resolver/: Cargo.toml
crates/core-resolver/src/: cache.rs  fake_ip.rs  group.rs  hosts.rs  lib.rs  mapping.rs  middleware.rs  packet.rs  policy.rs  resolver.rs  service.rs  singleflight.rs
crates/core-resolver/src/upstream/: hickory.rs  marked.rs  mod.rs  quic.rs  system.rs
crates/core-route/: Cargo.toml
crates/core-route/src/: builtin.rs  engine.rs  lib.rs  sniff.rs
crates/core-ruleset/: Cargo.toml
crates/core-ruleset/src/: fetch.rs  format.rs  ir.rs  lib.rs  manager.rs  matcher.rs  rrs.rs  spec.rs
crates/core-ruleset/src/parser/: binary.rs  mod.rs  sb_json.rs  txt.rs  yaml.rs
crates/core-ruleset/src/parser/mrs/: bitmap.rs  domain_set.rs  ipcidr_set.rs  mod.rs
crates/core-ruleset/tests/: mrs_roundtrip.rs  srs_v1_v5.rs
crates/core-runtime/: Cargo.toml
crates/core-runtime/src/: dns_listener.rs  engine.rs  group_selector.rs  health.rs  int_ranges.rs  lib.rs  listener_handler.rs
crates/core-runtime/tests/: listener_handler.rs
crates/core-smart/: Cargo.toml
crates/core-smart/src/: cache.rs  explain.rs  lib.rs  metrics.rs  selector.rs
crates/core-store/: Cargo.toml
crates/core-store/examples/: seed.rs
crates/core-store/src/: async_writer.rs  blobs.rs  lib.rs  schema.rs  store.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: main.rs
crates/wuther-core/: Cargo.toml
crates/wuther-core/src/: host_resources.rs  main.rs
data/feeds/: airport.cache
data/state/: rpkernel.redb
docs/: API.md  ARCHITECTURE.md  BUILD-PERF.md  CONFIGURATION.md  FEATURES.md  README.md  RELEASING.md  TROUBLESHOOTING.md  mesh-backend-foundation.md
examples/: android.yaml  daily.yaml  desktop.yaml  manual_only.yaml  router.yaml  with_feed.yaml
scripts/: README.md  build-all.ps1  check-repository.py
tests-e2e/: Cargo.toml
tests-e2e/src/: lib.rs
tests-e2e/tests/: e2e_mixed.rs  e2e_urltest.rs
