[workspace]
resolver = "2"
members = [
    "crates/core-config",
    "crates/core-runtime",
    "crates/core-inbound",
    "crates/core-outbound",
    "crates/core-feeds",
    "crates/core-store",
    "crates/core-ruleset",
    "crates/core-route",
    "crates/core-resolver",
    "crates/core-smart",
    "crates/core-api",
    "crates/core-capture",
    "crates/core-mesh",
    "crates/core-observe",
    "crates/proxy-core",
    "tests-e2e",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["RPKernel Contributors"]
repository = "https://example.com/rpkernel"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# 序列化与配置
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
humantime-serde = "1"

# 错误与日志
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 网络通用
bytes = "1"
url = "2"
ipnet = { version = "2", features = ["serde"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "dns-over-rustls", "dns-over-https-rustls"] }

# Hash / 集合
ahash = "0.8"
dashmap = "6"
parking_lot = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Web / API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }
redb = "2.2"
# 加密 / TLS / WS / 协议层
aes-gcm           = "0.10"
chacha20poly1305  = "0.10"
hkdf              = "0.12"
sha2              = "0.10"
hmac              = "0.12"
md-5              = "0.10"
blake3            = "1"
rustls            = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls      = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types  = "1"
webpki-roots      = "0.26"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
uuid              = { version = "1", features = ["v4"] }

# 工具
once_cell = "1"
regex = "1"
percent-encoding = "2"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# 内部 crate
core-config   = { path = "crates/core-config" }
core-runtime  = { path = "crates/core-runtime" }
core-inbound  = { path = "crates/core-inbound" }
core-outbound = { path = "crates/core-outbound" }
core-feeds    = { path = "crates/core-feeds" }
core-store    = { path = "crates/core-store" }
core-ruleset  = { path = "crates/core-ruleset" }
core-route    = { path = "crates/core-route" }
core-resolver = { path = "crates/core-resolver" }
core-smart    = { path = "crates/core-smart" }
core-api      = { path = "crates/core-api" }
core-capture  = { path = "crates/core-capture" }
core-mesh     = { path = "crates/core-mesh" }
core-observe  = { path = "crates/core-observe" }

# ============================================================================
# 编译时间 / 二进制大小 / 运行性能的权衡
# ============================================================================
# 设计目标：把 LLVM 后端的"惊喜成本"降到最低。
# * dev：incremental + codegen-units=256 + line-tables-only + 依赖 opt-level=1
#        —— 第二次以后增量编译几乎只有改动 crate 的耗时；
# * release：thin LTO + codegen-units=16，二进制大小几乎不变，
#            构建时间从 codegen-units=1 的 ~3min 降到 ~1min；
# * release-fast：完全关 LTO，仅 strip + opt-level=3，CI 快速验证用。
# ============================================================================

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
# line-tables-only 比 "full" 小一个量级，错误信息仍带行号；
# 显著降低链接器扫描 .pdb / .dwarf 的时间。
debug = "line-tables-only"
# Windows 上单独 .pdb，避免每次链接重写主二进制。
split-debuginfo = "unpacked"

# 关键：把第三方依赖编成 opt-level=1。
# rustc 编译 deps 一次后落进 incremental cache；之后每次只重链。
# 用户代码继续 opt-level=0 保持 hot-edit 极快。
[profile.dev.package."*"]
opt-level = 1
codegen-units = 16
debug = false

[profile.release]
opt-level = 3
lto = "thin"
# 16 个 codegen-units 配合 thin LTO ≈ codegen-units=1 + fat LTO 的 99%
# 性能水平，但构建时间下降 60%。
codegen-units = 16
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.release-fast]
inherits = "release"
lto = "off"
codegen-units = 256
debug = false
incremental = true

[profile.bench]
inherits = "release"
debug = true
