[workspace]
resolver = "2"
members = [
    "crates/core-config",
    "crates/core-fetch",
    "crates/core-runtime",
    "crates/core-inbound",
    "crates/core-outbound",
    "crates/core-feeds",
    "crates/core-store",
    "crates/core-ruleset",
    "crates/core-route",
    "crates/core-resolver",
    "crates/core-smart",
    "crates/core-api",
    "crates/core-capture",
    "crates/core-mesh",
    "crates/core-observe",
    "crates/core-process",
    "crates/wuther-core",
    "tests-e2e",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["WutherCore Contributors"]
repository = "https://github.com/MiChongs/WutherCore"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# 序列化与配置
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
humantime-serde = "1"

# 错误与日志
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 网络通用
bytes = "1"
url = "2"
ipnet = { version = "2", features = ["serde"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "dns-over-rustls", "dns-over-https-rustls"] }

# Hash / 集合 / 内存优化
ahash = "0.8"
dashmap = "6"
# `deadlock_detection` 让 watchdog 能侦测出循环互斥 —— 生产环境 API 卡死的
# 头号嫌疑（同 thread 在 entry RefMut 里再访问同 shard 的递归 RwLock）。
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
# 卡死时拿当前所有线程的栈，写进 panic.log 给运行人员排障。
backtrace = "0.3"
# 短字符串内联（≤24 字节不分配堆），活跃连接的 metadata 字段几乎全部命中。
compact_str = { version = "0.8", features = ["serde"] }
# 小向量内联（typical chains 长度 1-4），避免 chains/geoip 触发堆分配。
smallvec = { version = "1", features = ["serde", "union", "const_generics", "const_new"] }
# Arc 原子换页，给"连接表写入低频、快照读取高频"的场景做无锁切换。
arc-swap = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Web / API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
# 自研 core-fetch 用的 HTTP 1.1 client 栈 —— 直接走 hyper 1.x，注入
# bind_outbound_socket，关掉所有平台（含 Windows）订阅 / 规则集拉取的 TUN
# 自循环。已经替代 reqwest，依赖也跟着移除。
hyper            = { version = "1", features = ["client", "http1"] }
hyper-util       = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http             = "1"
http-body-util   = "0.1"
flate2           = "1"
brotli           = "7"
redb = "2.2"
# 加密 / TLS / WS / 协议层
aes-gcm           = "0.10"
chacha20poly1305  = "0.10"
hkdf              = "0.12"
sha2              = "0.10"
hmac              = "0.12"
md-5              = "0.10"
blake3            = "1"
rustls            = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls      = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types  = "1"
webpki-roots      = "0.26"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
uuid              = { version = "1", features = ["v4"] }
aes               = "0.8"
ctr               = "0.9"
cfb-mode          = "0.8"
crc32fast         = "1"
fnv               = "1"
zeroize           = "1"
sha3              = "0.10"
sha1              = "0.10"
rc4               = "0.1"
chacha20          = "0.9"

# QUIC + UDP 协议（Hysteria / TUIC）
quinn             = { version = "0.11", default-features = false, features = ["rustls", "ring", "runtime-tokio"] }
quinn-proto       = { version = "0.11", default-features = false, features = ["rustls", "ring"] }

# SSH 客户端
russh             = "0.46"
russh-keys        = "0.46"

# WireGuard 用户态
boringtun         = { version = "0.6", default-features = false }
x25519-dalek      = { version = "=2.0.0-rc.3", features = ["static_secrets"] }

# 工具
once_cell = "1"
regex = "1"
percent-encoding = "2"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# 内部 crate
core-config   = { path = "crates/core-config" }
core-fetch    = { path = "crates/core-fetch" }
core-runtime  = { path = "crates/core-runtime" }
core-inbound  = { path = "crates/core-inbound" }
core-outbound = { path = "crates/core-outbound" }
core-feeds    = { path = "crates/core-feeds" }
core-store    = { path = "crates/core-store" }
core-ruleset  = { path = "crates/core-ruleset" }
core-route    = { path = "crates/core-route" }
core-resolver = { path = "crates/core-resolver" }
core-smart    = { path = "crates/core-smart" }
core-api      = { path = "crates/core-api" }
core-capture  = { path = "crates/core-capture" }
core-mesh     = { path = "crates/core-mesh" }
core-observe  = { path = "crates/core-observe" }
core-process  = { path = "crates/core-process" }

# ============================================================================
# 编译时间 / 二进制大小 / 运行性能的权衡
# ============================================================================
# 设计目标：把 LLVM 后端的"惊喜成本"降到最低。
# * dev：incremental + codegen-units=256 + line-tables-only + 依赖 opt-level=1
#        —— 第二次以后增量编译几乎只有改动 crate 的耗时；
# * release：thin LTO + codegen-units=16，二进制大小几乎不变，
#            构建时间从 codegen-units=1 的 ~3min 降到 ~1min；
# * release-fast：完全关 LTO，仅 strip + opt-level=3，CI 快速验证用。
# ============================================================================

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
# line-tables-only 比 "full" 小一个量级，错误信息仍带行号；
# 显著降低链接器扫描 .pdb / .dwarf 的时间。
debug = "line-tables-only"
# Windows 上单独 .pdb，避免每次链接重写主二进制。
split-debuginfo = "unpacked"

# 关键：把第三方依赖编成 opt-level=1。
# rustc 编译 deps 一次后落进 incremental cache；之后每次只重链。
# 用户代码继续 opt-level=0 保持 hot-edit 极快。
[profile.dev.package."*"]
opt-level = 1
codegen-units = 16
debug = false

[profile.release]
opt-level = 3
lto = "thin"
# 16 个 codegen-units 配合 thin LTO ≈ codegen-units=1 + fat LTO 的 99%
# 性能水平，但构建时间下降 60%。
codegen-units = 16
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.release-fast]
inherits = "release"
lto = "off"
codegen-units = 256
debug = false
incremental = true

[profile.bench]
inherits = "release"
debug = true
