[package]
name = "core-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config  = { workspace = true }
core-smart   = { workspace = true }
core-runtime = { workspace = true }
core-route   = { workspace = true }
core-capture = { workspace = true }
core-feeds   = { workspace = true }
core-observe = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
bytes        = { workspace = true }
dashmap      = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
