[package]
name = "core-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config   = { workspace = true }
core-resolver = { workspace = true }
core-route    = { workspace = true }
core-runtime  = { workspace = true }
core-observe  = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
bytes         = { workspace = true }
ipnet         = { workspace = true }
parking_lot   = { workspace = true }
dashmap       = { workspace = true }
once_cell     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix      = { version = "0.29", features = ["net", "socket", "ioctl", "fs", "user"] }
libc     = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"
nix  = { version = "0.29", features = ["net", "socket", "ioctl"] }
