[package]
name = "core-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config   = { workspace = true }
core-resolver = { workspace = true }
core-route    = { workspace = true }
core-runtime  = { workspace = true }
core-outbound = { workspace = true }
core-observe  = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
bytes         = { workspace = true }
ipnet         = { workspace = true }
parking_lot   = { workspace = true }
dashmap       = { workspace = true }
once_cell     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
# IP/TCP/UDP 报头解析。复用 smoltcp::wire；不启用 socket 栈以保持轻量。
smoltcp       = { version = "0.11", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-ipv4-fragmentation",
    "socket-tcp",
    "socket-udp",
] }
# 用户态 TCP/IP 栈 —— 对标 sing-tun gVisor netstack。
# 专为 TUN proxy 设计，提供 TcpListener + UdpSocket + tokio async API。
netstack-smoltcp = "0.2"
futures = { workspace = true }
# 跨平台 TUN/TAP 设备 —— 替代手写的 linux_tun_io / windows_tun_io / macos_tun_io。
# 内置 GSO/GRO + batch I/O + vnet_hdr 处理，70.6 Gbps on Linux。
tun-rs = { version = "2", features = ["async"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nix      = { version = "0.29", features = ["net", "socket", "ioctl", "fs", "user"] }
libc     = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# blake3 用于 wintun adapter 稳定 GUID
blake3 = { workspace = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"
nix  = { version = "0.29", features = ["net", "socket", "ioctl"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
