[package]
name = "core-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
ipnet = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
