[package]
name = "core-feeds"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config   = { workspace = true }
core-outbound = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
serde_json    = { workspace = true }
base64        = { workspace = true }
url           = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
parking_lot   = { workspace = true }
futures       = { workspace = true }
async-trait   = { workspace = true }
