[package]
name = "core-inbound"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config   = { workspace = true }
core-route    = { workspace = true }
core-resolver = { workspace = true }
core-outbound = { workspace = true }
core-smart    = { workspace = true }
core-runtime  = { workspace = true }
core-observe  = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
bytes         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
parking_lot   = { workspace = true }
base64        = { workspace = true }
serde         = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios", target_os = "freebsd"))'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }
