[package]
name = "core-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config = { workspace = true }
async-trait = { workspace = true }
ipnet       = { workspace = true }
once_cell   = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
