[package]
name = "core-observe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
tracing-appender      = { workspace = true }
tokio                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
parking_lot           = { workspace = true }
dashmap               = { workspace = true }
ahash                 = { workspace = true }
once_cell             = { workspace = true }
uuid                  = { workspace = true }
futures               = { workspace = true }
