[package]
name = "core-outbound"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
bytes       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
base64      = { workspace = true }
parking_lot = { workspace = true }
hex         = { workspace = true }
futures     = { workspace = true }
pin-project-lite = { workspace = true }

# 协议层依赖
aes-gcm           = { workspace = true }
chacha20poly1305  = { workspace = true }
hkdf              = { workspace = true }
sha1              = "0.10"
sha2              = { workspace = true }
md-5              = { workspace = true }
blake3            = { workspace = true }
rustls            = { workspace = true }
tokio-rustls      = { workspace = true }
rustls-pki-types  = { workspace = true }
webpki-roots      = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid              = { workspace = true }
rand              = { workspace = true }
