[package]
name = "core-outbound"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config = { workspace = true }
core-reality = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
bytes       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
base64      = { workspace = true }
parking_lot = { workspace = true }
hex         = { workspace = true }
futures     = { workspace = true }
pin-project-lite = { workspace = true }
if-addrs    = "0.15"

# 协议层依赖
aes-gcm           = { workspace = true }
chacha20poly1305  = { workspace = true }
hkdf              = { workspace = true }
sha1              = "0.10"
sha2              = { workspace = true }
md-5              = { workspace = true }
blake3            = { workspace = true }
rustls            = { workspace = true }
tokio-rustls      = { workspace = true }
rustls-pki-types  = { workspace = true }
webpki-roots      = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid              = { workspace = true }
rand              = { workspace = true }
aes               = { workspace = true }
ctr               = { workspace = true }
cfb-mode          = { workspace = true }
crc32fast         = { workspace = true }
fnv               = { workspace = true }
hmac              = { workspace = true }
zeroize           = { workspace = true }
sha3              = { workspace = true }
rc4               = { workspace = true }
chacha20          = { workspace = true }
chrono            = { version = "0.4", default-features = false, features = ["clock"] }
russh             = { workspace = true }
russh-keys        = { workspace = true }
quinn             = { workspace = true }
quinn-proto       = { workspace = true }
h3                = "0.0.8"
h3-quinn          = "0.0.10"
http              = "1"
blake2            = "0.10"
# boringtun 0.6 锁定老 dalek 版本与 russh 冲突；改为手工实现 WireGuard
# 用 chacha20poly1305 + blake2 + curve25519-dalek（与 russh 同版）
curve25519-dalek  = "4.1"
pbkdf2            = "0.12"
hyper             = { version = "1", features = ["client", "http2"] }
hyper-util        = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"] }
http-body-util    = "0.1"
rand_chacha       = "0.3"
smoltcp           = { version = "0.11", default-features = false, features = ["std", "alloc", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "async"] }
# socket2：在 Linux/Android 上对 outbound socket 设置 SO_MARK，配合
# `ip rule fwmark X lookup main` 让代理出站绕开 TUN 自身路由表，
# 避免"resolve 出 IP 后 connect 又被 TUN 截走"的死循环。
# `all` feature 才会启用 `Socket::set_mark` 等平台特定方法。
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# IP_UNICAST_IF / IPV6_UNICAST_IF setsockopt —— 出站 socket 强绑物理网卡，
# 避免 WinTUN metric 最低导致出站包被自家 TUN 接管再走代理（死循环）。
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# IP_BOUND_IF / IPV6_BOUND_IF setsockopt —— 同 Windows 思路，darwin 平台
# 出站 socket 必须按 ifindex 绑定。
libc = "0.2"
