[package]
name = "core-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot   = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
once_cell     = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
# JNI 桥 —— 调 ConnectivityManager.getConnectionOwnerUid 反查跨 UID 连接。
# 与 core-capture 的 android_jni 同版本，避免 JavaVM 类型不一致。
jni = "0.21"
parking_lot = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
