[package]
name = "core-reality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aws-lc-rs = { version = "=1.17.3", default-features = false, features = ["non-fips", "unstable"] }
base64.workspace = true
bytes.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2"] }
hyper-util.workspace = true
log = "0.4"
rand = "0.9"
rcgen = { version = "0.14.8", default-features = false, features = ["aws_lc_rs"] }
regex.workspace = true
subtle = "2.6"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
xray-transport.workspace = true
xray-utls.workspace = true
zeroize.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
hyper = { workspace = true, features = ["http2", "server"] }
rustls = { workspace = true, features = ["aws_lc_rs", "prefer-post-quantum"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws_lc_rs", "tls12"] }
