[package]
name = "core-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config       = { workspace = true }
core-ruleset      = { workspace = true }
core-store        = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
serde_yaml        = { workspace = true }
tokio             = { workspace = true }
async-trait       = { workspace = true }
parking_lot       = { workspace = true }
dashmap           = { workspace = true }
ipnet             = { workspace = true }
hickory-resolver  = { workspace = true }
quinn             = { workspace = true }
rustls            = { workspace = true }
tokio-rustls      = { workspace = true }
webpki-roots      = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
futures           = { workspace = true }
