[package]
name = "core-ruleset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RPKernel 外部规则集 —— mihomo / sing-box / 自定义格式"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
ipnet       = { workspace = true }
ahash       = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
parking_lot = { workspace = true }
dashmap     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
humantime-serde = { workspace = true }
crc32fast   = "1"
