[package]
name = "core-ruleset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WutherCore 外部规则集 —— mihomo / sing-box / 自定义格式"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
ipnet       = { workspace = true }
ahash       = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
parking_lot = { workspace = true }
dashmap     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
humantime-serde = { workspace = true }
crc32fast   = "1"
# 纯 Rust zstd 解码器 —— mihomo MRS v1 整体经 zstd 流压缩。
# 选 ruzstd 而非 zstd-rs 是为了避免 C 依赖（zstd-sys）在 Android NDK 交叉编译时的麻烦。
ruzstd      = "0.8"
