[package]
name = "core-smart"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-config   = { workspace = true }
core-observe  = { workspace = true }
core-store    = { workspace = true }
tokio         = { workspace = true }
parking_lot   = { workspace = true }
dashmap       = { workspace = true }
ahash         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
once_cell     = { workspace = true }
